possible fix for gallery transition safari

--- a/src/modules/gallery/GalleryImage.scss
+++ b/src/modules/gallery/GalleryImage.scss
@@ -4,9 +4,14 @@
   top:0px;
   width:100%;
   height:100%;
-  visibility: hidden;
+  //visibility: hidden;
+  opacity: 0;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0,0,0);
+  -webkit-transform-style: preserve-3d;
   &.active{
-    visibility: visible;
+    //visibility: visible;
+    opacity: 1;
   }
   .image-preloader{
     position: absolute;
